--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,9 @@
         }
     },
     "autoload-dev": {
-        "classmap": ["test"]
+        "psr-4": {
+            "lokothodida\\BankTest\\": "test"
+        }
     },
     "scripts": {
       "test": [ "@static-analysis", "@unit-test" ],
