Add web server to serve endpoints for commands

--- a/app/composer.json
+++ b/app/composer.json
@@ -8,7 +8,8 @@
     ],
     "require": {
         "phpunit/phpunit": "^7.4",
-        "phpstan/phpstan": "^0.10.3"
+        "phpstan/phpstan": "^0.10.3",
+        "ext-json": "*"
     },
     "autoload": {
         "psr-4": {
