--- a/deploy/docker-compose.yaml
+++ b/deploy/docker-compose.yaml
@@ -2,18 +2,13 @@ version: '3'
 
 services:
   bank-http-server:
-    command: "php -S 0.0.0.0:${HTTP_PORT} -t ./public"
+    command: "php public/index.php"
     build:
       context: ./
     working_dir: /server
     volumes:
       - ./..:/server
+    environment:
+      HTTP_PORT: ${HTTP_PORT}
     ports:
       - ${HTTP_PORT}:${HTTP_PORT}
-#
-#  bank-console:
-#    build:
-#      context: ./
-#    working_dir: /server
-#    volumes:
-#      - ./..:/server
